2009-12-30  Rafael Villar Burke  <pachi@rvburke.com>

	* foot.src: Update footer

2009-12-29  Rafael Villar Burke  <pachi@rvburke.com>

	* about.src, applications.src, articles.src, developer.src,
	feedback.src, head.src, index.src, newsitems.py, reference.src,
	tutorial.src: Fix markup to make it more standards compliant. Patch
	by Joel Juvenal Rivera Rivera. Thanks!

2009-12-26  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* newsitems.py: Advertise 2.21.0 release of pygobject and
	2.17.0 release of pygtk

2009-12-14  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Tryton

2009-12-03  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add TextTest and PyUseCase

2009-12-02  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add virt-manager

2009-11-30  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Lernid

2009-11-27  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src feedback.src about.src articles.src:
	Update or remove dead links
	* consulting.src: Remove Sicem, as it's no longer active
	* developer.src: Change subversion references to git equivalents

2009-11-20  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Gvb and gallery-uploader by Pietro Battiston
			    Add easygconf by Florian Diesch

2009-11-15  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add GoogSysTray

2009-10-03  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Samuel from John Cheetham

2009-10-02  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Update Pyblassreport URL. Add ASCEND.

2009-09-24  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* newsitems.py: Advertise 2.20.0 release of pygobject and
	2.16.0 release of pygtk

2009-09-22  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: update link

2009-09-18  Rafael Villar Burke  <pachi@rvburke.com>

	* articles/subclassing-gobject/*: Add article